# v_memory_manager

./: .gitignore  README.md  pyproject.toml
.atl/: skill-registry.md
.plans/: plan_v1.md  plan_v2.md  plan_v3.md  plan_v4.md  plan_v5.md  plan_v6.md
examples/: console_chat.py  document_translate.py  extract_and_translate.py  translate_book_incremental.py
plans/: book-memory-lore.md  book-parent-child.md  context-injection-optimization.md  conversation-summary-memory.md
src/: __init__.py  book_memory.py  book_models.py  conversation_summary.py  db.py  def_system.md  deque.py  memory.py  memory_models.py  memory_router.py  models.py  nlp_engine.py  patterns.py  roleplay_memory.py  semantic_memory.py
tests/: test_book_memory.py  test_conv_summary.py  test_patterns.py  test_plan_v5.py  test_regression.py
tests/test_data/: sample_index.txt
